@@ -1,3 +1,7 @@
+- bootloader configuration:
+  o make kernel server default if installed
+    (we were only checking for long dead flavors such as enterprise, ...)
+
 Version 17.57 - 21 September 2016
 
 - use new CSS syntax for font (mga#19430)
