@@ -1,3 +1,7 @@
+- drakboot:
+  o make kernel server default if installed
+    (we were only checking for long dead flavors such as enterprise, ...)
+
 Version 17.56 - 19 September 2016
 
 - detect ovirt too (mga#19308)
